--- a/index.html
+++ b/index.html
@@ -347,8 +347,7 @@
                                                 <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
                                                     Meu segundo
                                                     projeto</h1>
-                                                <p class="ift-margin-bottom-30">Site feito com HTML, CSS, Javascript
-                                                    para um consultório de psicologia.</p>
+                                                <p class="ift-margin-bottom-30">Aguarde...</p>
                                                 <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
                                                     projeto</a>
                                             </div>
@@ -357,7 +356,7 @@
                                             class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
                                             <div class="ift-portfolio-item-thumb">
                                                 <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
-                                                <img src="./imagens/thumb_imagens/thumb-1.jpg" alt="Nome do projeto 02"
+                                                <img src="./LAYOUT/em_breve.png" alt="Nome do projeto 02"
                                                     title="Nome do projeto 02" />
                                                 <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
                                                     <ion-icon name="arrow-redo-sharp"></ion-icon>
@@ -376,8 +375,7 @@
                                                 <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
                                                     Meu terceiro
                                                     projeto</h1>
-                                                <p class="ift-margin-bottom-30">Site feito com HTML, CSS, Javascript
-                                                    para uma loja de bicicletas.</p>
+                                                <p class="ift-margin-bottom-30">Aguarde...</p>
                                                 <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
                                                     projeto</a>
                                             </div>
@@ -386,7 +384,7 @@
                                             class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
                                             <div class="ift-portfolio-item-thumb">
                                                 <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
-                                                <img src="./imagens/thumb_imagens/thumb-3.jpg" alt="Nome do projeto 03"
+                                                <img src="./LAYOUT/em_breve.png" alt="Nome do projeto 03"
                                                     title="Nome do projeto 03" />
                                                 <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
                                                     <ion-icon name="arrow-redo-sharp"></ion-icon>
@@ -405,8 +403,7 @@
                                                 <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
                                                     Meu quarto
                                                     projeto</h1>
-                                                <p class="ift-margin-bottom-30">Site feito com HTML, CSS, Javascript
-                                                    para uma startup de tecnologia.</p>
+                                                <p class="ift-margin-bottom-30">Aguarde...</p>
                                                 <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
                                                     projeto</a>
                                             </div>
@@ -415,7 +412,7 @@
                                             class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
                                             <div class="ift-portfolio-item-thumb">
                                                 <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
-                                                <img src="./imagens/thumb_imagens/thumb-4.jpg" alt="Nome do projeto 04"
+                                                <img src="./LAYOUT/em_breve.png" alt="Nome do projeto 04"
                                                     title="Nome do projeto 04" />
                                                 <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
                                                     <ion-icon name="arrow-redo-sharp"></ion-icon>
@@ -434,8 +431,7 @@
                                                 <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
                                                     Meu quinto
                                                     projeto</h1>
-                                                <p class="ift-margin-bottom-30">Site feito com HTML, CSS, Javascript
-                                                    para uma construtora.</p>
+                                                <p class="ift-margin-bottom-30">Aguarde...</p>
                                                 <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
                                                     projeto</a>
                                             </div>
@@ -444,7 +440,7 @@
                                             class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
                                             <div class="ift-portfolio-item-thumb">
                                                 <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
-                                                <img src="./imagens/thumb_imagens/thumb-5.jpg" alt="Nome do projeto 05"
+                                                <img src="./LAYOUT/em_breve.png" alt="Nome do projeto 05"
                                                     title="Nome do projeto 05" />
                                                 <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
                                                     <ion-icon name="arrow-redo-sharp"></ion-icon>
