--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -127,8 +127,7 @@
                                         <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
                                             Meu segundo
                                             projeto</h1>
-                                        <p class="ift-margin-bottom-30">Site feito com HTML, CSS, Javascript
-                                            para um consultório de psicologia.</p>
+                                        <p class="ift-margin-bottom-30">Aguarde...</p>
                                         <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
                                             projeto</a>
                                     </div>
@@ -136,7 +135,7 @@
                                 <div class="col-sm-12 col-lg-6 order-1 order-lg-2">
                                     <div class="ift-portfolio-item-thumb">
                                         <div class="ift-portfolio-item-box d-none d-lg-block" data-aos="zoom-in"></div>
-                                        <img src="../imagens/thumb_imagens/thumb-1.jpg" alt="Nome do projeto 02"
+                                        <img src="../LAYOUT/em_breve.png" alt="Nome do projeto 02"
                                             title="Nome do projeto 02" data-aos="flip-left" data-aos-offset="300"
                                             data-aos-delay="300" />
                                         <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
@@ -157,8 +156,7 @@
                                         <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
                                             Meu terceiro
                                             projeto</h1>
-                                        <p class="ift-margin-bottom-30">Site feito com HTML, CSS, Javascript
-                                            para uma loja de bicicletas.</p>
+                                        <p class="ift-margin-bottom-30">Aguarde...</p>
                                         <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
                                             projeto</a>
                                     </div>
@@ -166,7 +164,7 @@
                                 <div class="col-sm-12 col-lg-6 offset-lg-2 order-1 order-lg-2 col-xl-6 offset-xl-1">
                                     <div class="ift-portfolio-item-thumb">
                                         <div class="ift-portfolio-item-box d-none d-lg-block" data-aos="zoom-in"></div>
-                                        <img src="../imagens/thumb_imagens/thumb-3.jpg" alt="Nome do projeto 03"
+                                        <img src="../LAYOUT/em_breve.png" alt="Nome do projeto 03"
                                             title="Nome do projeto 03" data-aos="flip-left" data-aos-offset="300"
                                             data-aos-delay="300" />
                                         <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
@@ -187,8 +185,7 @@
                                         <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
                                             Meu quarto
                                             projeto</h1>
-                                        <p class="ift-margin-bottom-30">Site feito com HTML, CSS, Javascript
-                                            para uma startup de tecnologia.</p>
+                                        <p class="ift-margin-bottom-30">Aguarde...</p>
                                         <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
                                             projeto</a>
                                     </div>
@@ -196,7 +193,7 @@
                                 <div class="col-sm-12 col-lg-6 order-1 order-lg-2">
                                     <div class="ift-portfolio-item-thumb">
                                         <div class="ift-portfolio-item-box d-none d-lg-block" data-aos="zoom-in"></div>
-                                        <img src="../imagens/thumb_imagens/thumb-4.jpg" alt="Nome do projeto 04"
+                                        <img src="../LAYOUT/em_breve.png" alt="Nome do projeto 04"
                                             title="Nome do projeto 04" data-aos="flip-left" data-aos-offset="300"
                                             data-aos-delay="300" />
                                         <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
@@ -217,8 +214,7 @@
                                         <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
                                             Meu quinto
                                             projeto</h1>
-                                        <p class="ift-margin-bottom-30">Site feito com HTML, CSS, Javascript
-                                            para uma construtora.</p>
+                                        <p class="ift-margin-bottom-30">Aguarde...</p>
                                         <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
                                             projeto</a>
                                     </div>
@@ -226,7 +222,7 @@
                                 <div class="col-sm-12 col-lg-6 offset-lg-2 order-1 order-lg-2 col-xl-6 offset-xl-1">
                                     <div class="ift-portfolio-item-thumb">
                                         <div class="ift-portfolio-item-box d-none d-lg-block" data-aos="zoom-in"></div>
-                                        <img src="../imagens/thumb_imagens/thumb-5.jpg" alt="Nome do projeto 05"
+                                        <img src="../LAYOUT/em_breve.png" alt="Nome do projeto 05"
                                             title="Nome do projeto 05" data-aos="flip-left" data-aos-offset="300"
                                             data-aos-delay="300" />
                                         <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
