--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -301,20 +301,53 @@
                                     <div class="ift-portfolio-item-info ift-text-light" data-aos="fade-right"
                                         data-aos-delay="200">
                                         <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
-                                            Meu sétimo
-                                            projeto</h1>
-                                        <p class="ift-margin-bottom-30">Aguarde...</p>
-                                        <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
+                                            toDo MyList</h1>
+                                        <p class="ift-margin-bottom-30">Aplicativo web desenvolvido com React. A
+                                            proposta deste trabalho foi a construção de uma página que
+                                            permite o usuário adicionar e gerir itens em uma lista de tarefas.</p>
+                                        <a href="https://github.com/igorfurtado/toDo-list"
+                                            class="ift-btn ift-btn-large ift-btn-orange-no-scale" target="_blank">Ver
                                             projeto</a>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 col-lg-6 offset-lg-2 order-1 order-lg-2 col-xl-6 offset-xl-1">
                                     <div class="ift-portfolio-item-thumb">
                                         <div class="ift-portfolio-item-box d-none d-lg-block" data-aos="zoom-in"></div>
-                                        <img src="../LAYOUT/em_breve.png" alt="Nome do projeto 07"
+                                        <img src="../LAYOUT/mockup_toDo.png" alt="Nome do projeto 07"
                                             title="Nome do projeto 07" data-aos="flip-left" data-aos-offset="300"
                                             data-aos-delay="300" />
-                                        <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
+                                        <a href="https://todomylist.vercel.app/"
+                                            class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar site
+                                            <ion-icon name="arrow-redo-sharp"></ion-icon>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </li>
+
+                        <li class="ift-portfolio-item" data-slide="8">
+
+                            <div class="row">
+                                <div class="col-sm-12 col-lg-4 offset-lg-2 order-2 order-lg-1 col-xl-4 offset-xl-1">
+                                    <div class="ift-portfolio-item-info ift-text-light" data-aos="fade-left"
+                                        data-aos-delay="200">
+                                        <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
+                                            Meu oitavo projeto</h1>
+                                        <p class="ift-margin-bottom-30">Aguarde...</p>
+                                        <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale"
+                                            target="_blank">Ver
+                                            projeto</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-12 col-lg-6 order-1 order-lg-2">
+                                    <div class="ift-portfolio-item-thumb">
+                                        <div class="ift-portfolio-item-box d-none d-lg-block" data-aos="zoom-in"></div>
+                                        <img src="../LAYOUT/em_breve.png" alt="Nome do projeto 08"
+                                            title="Nome do projeto 08" data-aos="flip-left" data-aos-offset="300"
+                                            data-aos-delay="300" />
+                                        <a href="#" class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar
+                                            site
                                             <ion-icon name="arrow-redo-sharp"></ion-icon>
                                         </a>
                                     </div>
