--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel='preload' as='style'
         href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,400;0,700;0,800;1,400;1,700;1,800&display=swap">
     <link
-        href="https://fonts.apis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,400;0,700;0,800;1,400;1,700;1,800&display=swap"
+        href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,400;0,700;0,800;1,400;1,700;1,800&display=swap"
         rel="stylesheet">
     <link rel="icon" type="imagem/png" href="./LAYOUT/logo-IT-front-end-shortcut.png" />
     <link rel="stylesheet" type="text/css" href="CSS/bootstrap-grid.min.css" />
