--- a/index.html
+++ b/index.html
@@ -582,7 +582,39 @@
                                         <div class="col-sm-12 col-md-12 col-lg-4 order-2 order-sm-2 order-md-1">
                                             <div class="ift-portfolio-item-info ift-text-light">
                                                 <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
-                                                    Meu oitavo projeto</h1>
+                                                    DeoX</h1>
+                                                <p class="ift-margin-bottom-30">Landing page do banco digital DeoX
+                                                    desenvolvida com React.</p>
+                                                <a href="https://github.com/igorfurtado/DeoX"
+                                                    class="ift-btn ift-btn-large ift-btn-orange-no-scale"
+                                                    target="_blank">Ver
+                                                    projeto</a>
+                                            </div>
+                                        </div>
+                                        <div
+                                            class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
+                                            <div class="ift-portfolio-item-thumb">
+                                                <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
+                                                <img src="./LAYOUT/mockup_DeoX.jpg" alt="DeoX mockup"
+                                                    title="DeoX mockup" />
+                                                <a href="https://deox.vercel.app/"
+                                                    class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar
+                                                    site
+                                                    <ion-icon name="arrow-redo-sharp"></ion-icon>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </li>
+
+                                <li class="ift-portfolio-item" data-slide="9">
+
+                                    <div class="row">
+                                        <div class="col-sm-12 col-md-12 col-lg-4 order-2 order-sm-2 order-md-1">
+                                            <div class="ift-portfolio-item-info ift-text-light">
+                                                <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
+                                                    Meu nono projeto</h1>
                                                 <p class="ift-margin-bottom-30">Aguarde...</p>
                                                 <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale"
                                                     target="_blank">Ver
@@ -593,8 +625,8 @@
                                             class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
                                             <div class="ift-portfolio-item-thumb">
                                                 <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
-                                                <img src="./LAYOUT/em_breve.png" alt="Nome do projeto 08"
-                                                    title="Nome do projeto 08" />
+                                                <img src="./LAYOUT/em_breve.png" alt="Nome do projeto 09"
+                                                    title="Nome do projeto 09" />
                                                 <a href="#" class="ift-btn ift-btn-medium ift-btn-dark"
                                                     target="_blank">Visitar
                                                     site
